flask : static files

--- a/week-2/day-4/tmpl_data/templates/index.html
+++ b/week-2/day-4/tmpl_data/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Dashboard</title>
     </head>
-    <body>
+    <body style="background : url({{bg}})">
         <h3>
             This is index page
         </h3>
