flask : static files : style changed

--- a/week-2/day-4/tmpl_data/templates/index.html
+++ b/week-2/day-4/tmpl_data/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Dashboard</title>
     </head>
-    <body style="background : url({{bg}})">
+    <body style="background : url({{bg}}); background-repeat: no-repeat;  background-attachment: fixed;  background-position: center;">
         <h3>
             This is index page
         </h3>
