flask : loading css from static files

--- a/week-2/day-4/tmpl_data/templates/index.html
+++ b/week-2/day-4/tmpl_data/templates/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>Dashboard</title>
+        <link rel='stylesheet' href='/static/imgbg.css'/>
     </head>
-    <body style="background : url({{bg}}); background-repeat: no-repeat;  background-attachment: fixed;  background-position: center;">
+    <body style="background : url({{bg}});" class="imbg">
         <h3>
             This is index page
         </h3>
