flask : jinja2 forms

--- a/week-2/day-4/tmpl_data/templates/addition.html
+++ b/week-2/day-4/tmpl_data/templates/addition.html
@@ -4,7 +4,7 @@
         <title>Addition</title>
     </head>
     <body>
-        <form>
+        <form action="/calculation" method="POST">
             <div>
                 <input type="number" name="num1" placeholder="Number 1"/>
             </div>
