flask : conditional rendering

--- a/week-2/day-4/tmpl_data/templates/addition.html
+++ b/week-2/day-4/tmpl_data/templates/addition.html
@@ -12,8 +12,12 @@
                 <input type="number" name="num2" placeholder="Number 2"/>
             </div>
             <div>
-                <input type="submit" value="Addition"/>
+                <input type="submit" value="Add"/>
+                <input type="submit" value="Sub"/>
+                <input type="submit" value="Mul"/>
+                <input type="submit" value="Div"/>
             </div>
+            
         </form>
     </body>
 </html>
