--- a/week-2/day-4/tmpl_data/templates/calculation.html
+++ b/week-2/day-4/tmpl_data/templates/calculation.html
@@ -4,8 +4,21 @@
         <title>Calculation</title>
     </head>
     <body>
+        {% if op == 'add' %}
         <div>
             Addition of Two Numbers is {{result}}
         </div>
+        {% elif op == 'sub'%}
+        <div>
+            Subtraction of Two Numbers is {{result}}
+        </div>
+        {% elif op == 'mul'%}
+        <div>
+            Multiplication of Two Numbers is {{result}}
+        </div>
+        {% else %}<div>
+            Multiplication of Two Numbers is {{result}}
+        </div>
+        {% endif %}
     </body>
 </html>
