flask : dynamic rendering

--- a/week-2/day-4/tmpl_data/templates/addition.html
+++ b/week-2/day-4/tmpl_data/templates/addition.html
@@ -4,7 +4,7 @@
         <title>Addition</title>
     </head>
     <body>
-        <form action="{{ url_for('perform_calculation', op='add',dt=123, mt=89) }}" method="POST">
+        <form action="{{ url_for('perform_calculation', op='calc',dt=123, mt=89) }}" method="POST">
             <div>
                 <input type="number" name="num1" placeholder="Number 1"/>
             </div>
@@ -12,10 +12,10 @@
                 <input type="number" name="num2" placeholder="Number 2"/>
             </div>
             <div>
-                <input type="submit" value="Add"/>
-                <input type="submit" value="Sub"/>
-                <input type="submit" value="Mul"/>
-                <input type="submit" value="Div"/>
+                <input type="submit" name="action" value="Add"/>
+                <input type="submit" name="action" value="Sub"/>
+                <input type="submit" name="action" value="Mul"/>
+                <input type="submit" name="action" value="Div"/>
             </div>
             
         </form>
