--- a/week-2/day-4/tmpl_data/templates/calculation.html
+++ b/week-2/day-4/tmpl_data/templates/calculation.html
@@ -4,20 +4,20 @@
         <title>Calculation</title>
     </head>
     <body>
-        {% if op == 'add' %}
+        {% if op == 'Add' %}
         <div>
             Addition of Two Numbers is {{result}}
         </div>
-        {% elif op == 'sub'%}
+        {% elif op == 'Sub'%}
         <div>
             Subtraction of Two Numbers is {{result}}
         </div>
-        {% elif op == 'mul'%}
+        {% elif op == 'Mul'%}
         <div>
             Multiplication of Two Numbers is {{result}}
         </div>
         {% else %}<div>
-            Multiplication of Two Numbers is {{result}}
+            Division of Two Numbers is {{result}}
         </div>
         {% endif %}
     </body>
