flask : jinja loops and error handler

--- a/week-2/day-4/tmpl_data/templates/names.html
+++ b/week-2/day-4/tmpl_data/templates/names.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <ul>
-
+            {% for nm in nms %}
+            <li>{{nm}}</li>
+            {% endfor %}
         </ul>
     </body>
 </html>
