--- a/week-2/day-4/tmpl_data/templates/404.html
+++ b/week-2/day-4/tmpl_data/templates/404.html
@@ -23,7 +23,7 @@
                 
                 <p>the page you are looking for not avaible!</p>
                 
-                <a href="" class="link_404">Go to Home</a>
+                <a href="/" class="link_404">Go to Home</a>
             </div>
                 </div>
                 </div>
