flask : case-study : user wise menu

--- a/week-2/day-4/case-study-flask-mvc/templates/dashboard.html
+++ b/week-2/day-4/case-study-flask-mvc/templates/dashboard.html
@@ -6,8 +6,8 @@
     </head>
     <body>
        <ol>
-           {% for mn in menu %}
-            <li> {{mn}} </li>
+           {% for mn in menus %}
+            <li> <a href="{{mn}}"> {{mn}} </a> </li>
            {% endfor %}
        </ol>
     </body>
