flask : case study : user wise dashboard

--- a/week-2/day-4/case-study-flask-mvc/templates/dashboard.html
+++ b/week-2/day-4/case-study-flask-mvc/templates/dashboard.html
@@ -7,7 +7,7 @@
     <body>
        <ol>
            {% for mn in menus %}
-            <li> <a href="{{mn}}"> {{mn}} </a> </li>
+            <li> <a href="{{mn.get('url')}}"> {{mn.get('ttl')}} </a> </li>
            {% endfor %}
        </ol>
     </body>
