h5c3js  : hover code

--- a/week-4/day-2/css-basics/hover.css
+++ b/week-4/day-2/css-basics/hover.css
@@ -3,3 +3,7 @@
     height: 10vw;
     background-color: cadetblue;
 }
+.dvHvr:hover {
+    background-color: cadetblue;
+    box-shadow: 5px 10px #888888;
+}
