h5c3js : skeleton teams UI

--- a/week-4/day-2/layouts/demo1.html
+++ b/week-4/day-2/layouts/demo1.html
@@ -9,7 +9,68 @@
 
     <body>
         <div class="outer">
-            <div class="max-cont"></div>
+            <div class="max-cont">
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+                <div class="round">
+                    Here is some text in circle
+                </div>
+            </div>
             <div class="min-cont"></div>
         </div>
     </body>
