--- a/week-4/day-2/layouts/demo1.css
+++ b/week-4/day-2/layouts/demo1.css
@@ -12,10 +12,25 @@ body {
 .max-cont {
     /* width: 80%; */
     flex-basis : 80%;
+    flex-wrap: wrap;
     border: 1px solid red;
+    display: flex;
+    height: 100%;
+    align-self: center;
+    justify-content: space-evenly;
 }
 .min-cont {
     /* width: 20%; */
     flex-basis : 20%;
+    border: 1px solid red;
+    display: flex;
+}
+
+.round {
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    text-align: center;
+    display: flex;
     border: 1px solid red;
 }
