--- a/week-4/day-2/layouts/demo1.html
+++ b/week-4/day-2/layouts/demo1.html
@@ -71,7 +71,12 @@
                     Here is some text in circle
                 </div>
             </div>
-            <div class="min-cont"></div>
+            <div class="min-cont">
+                <div class="cnt-ev">
+                    <input type="text">
+                    <input type="button" value="Send">
+                </div>
+            </div>
         </div>
     </body>
 
