--- a/week-4/day-6/first-app/src/index.css
+++ b/week-4/day-6/first-app/src/index.css
@@ -10,6 +10,7 @@ body, #root {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 
     border: 1px solid red;
 }
