--- a/week-4/day-6/first-app/src/third.css
+++ b/week-4/day-6/first-app/src/third.css
@@ -9,7 +9,7 @@
     flex-basis: 1;
     width: 100%;
     height: 30%;
-    border: 1px solid rgb(255,0,166);
+    border: 1px solid rgb(69,78, 12);
 }
 
 .red, .green, .blue {
